# crlGRU

./: .gitignore  BASELINE_COMPACT.md  CMakeLists.txt  CURRENT_TASK.md  Doxyfile  README.md
cmake/: FindLibTorch.cmake
config/: default_config.json
docs/: DEVELOPMENT_BASELINE_PROMPT.md  GITIGNORE_GUIDE.md  README.md  SUBMODULE_USAGE.md  TASK_SPECIFIC_PROMPTS.md  THEORETICAL_FOUNDATIONS.md  USAGE_GUIDE_JP.md
docs/guides/: API_REFERENCE.md  error_handling_guide.md  gru_agent_tutorial.md
docs/guides/usage/: BASIC_USAGE.md
docs/prompts/: INDEX.md  USAGE_GUIDE.md
docs/prompts/compact/: BASELINE_COMPACT.md
docs/prompts/core/: CURRENT_TASK.md
docs/prompts/reference/: DEVELOPMENT_BASELINE_PROMPT.md  FULL_REFERENCE.md
docs/prompts/specialized/: build_fix.md  header_only_dev.md  testing.md
include/: crlgru.h  crlgru_simple.h
include/crlgru/: common.h  common.hpp  crl_gru.hpp  crlgru.hpp
include/crlgru/core/: embodied_fep_gru_cell.hpp  fep_gru_cell.hpp  fep_gru_network.hpp  polar_spatial_attention.hpp
include/crlgru/optimizers/: spsa_optimizer.hpp
include/crlgru/utils/: config_types.hpp  error_handling.hpp  math_utils.hpp  spatial_transforms.hpp
scripts/: build_with_crlgru.sh  generate_docs.sh
src/core/: attention_evaluator.cpp  embodied_fep_gru_cell.cpp  fep_gru_cell.cpp  fep_gru_network.cpp  spsa_optimizer.cpp  utils.cpp
tests/: CMakeLists.txt  test_crlgru.cpp  test_embodied_cell.cpp  test_error_handling.cpp  test_fep_gru_cell.cpp  test_fep_gru_integration.cpp  test_fep_gru_network.cpp  test_spsa_optimizer.cpp  test_utils.cpp
tests/examples/: CMakeLists.txt  simple_prediction_example.cpp  swarm_coordination_example.cpp
